--- a/_posts/2023-11-20-blog-test.md
+++ b/_posts/2023-11-20-blog-test.md
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: "Hello world - This is a test blog"
+title: "The blog is working!"
 permalink: /posts/blog-test
 ---
 Author: Mahbub Hasan
 
-I am trying to see if I can get blogging working on my GH page 
+Let's gooooooooooooo
 
 # Navigations:
 
-🏠 [Home](https://evilapple.org) , 📖 [About this website](/pages/about), 📢 [What are deeds?](/pages/deeds.md)
+🏠 [Home](https://evilapple.org), 📝 [Blog](/pages/blog), 📖 [About this website](/pages/about), 📢 [What are deeds?](/pages/deeds.md)
 
 Social: <a href="https://t.me/The_PenguinsClub">![Static Badge](https://img.shields.io/badge/Telegram-join_us-0088CC?logo=telegram&logoColor=white&link=https%3A%2F%2Ft.me%2FThe_PenguinsClub)</a>
 
